Fix clear button. Script called out incorrect class type. Change background to darker color to contrast with the calculator

--- a/styles.css
+++ b/styles.css
@@ -3,7 +3,7 @@
 } */
 
 body {
-    background-color: rgba(211, 211, 211, 0.539);
+    background-color: rgb(151, 150, 150);
     display: flex;
     justify-content: center;
     align-items: center;
